<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >

    <LinearLayout
            style="@style/homt_linear_style"
            >

        <Button
                android:id="@+id/news"
                style="@style/home_buton_style"
                android:background="@drawable/button_2"
                android:text="@string/news"
                />

        <Button
                android:id="@+id/xuexiaogaikuang"
                android:text="@string/xuexiaogaikuang"
                style="@style/home_buton_style"
                android:background="@drawable/button_3"
                />

        <Button
                android:id="@+id/xiaoyuanfengcai"
                android:text="@string/xiaoyuanfengcai"
                style="@style/home_buton_style"
                android:background="@drawable/button_6"
                />

    </LinearLayout>

    <LinearLayout
            style="@style/homt_linear_style">
        <Button
                style="@style/home_buton_style"
                android:id="@+id/yuanxijieshao"
                android:text="@string/yuanxijieshao"
                android:background="@drawable/button_5"
                />

        <Button
                android:id="@+id/tesezhuanye"
                android:text="@string/tesezhuanye"
                style="@style/home_buton_style"
                android:background="@drawable/button_9"
                />

        <!--不显示却站地方-->
        <Button
                style="@style/home_buton_style"
                android:visibility="invisible"
                android:background="@drawable/button_3"
                />

    </LinearLayout>


</LinearLayout>